--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Inicio - Isolatec</title>
-    <link rel="stylesheet"; href="assets/styles.css?ver=0.5">
+    <link rel="stylesheet"; href="assets/styles.css?ver=0.8">
     <link href="https://fonts.googleapis.com/css?family=Lora|Open+Sans|Roboto" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Raleway:900" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Oswald|Source+Sans+Pro" rel="stylesheet">
@@ -49,7 +49,7 @@
         Expertos en reformas 
       </h1>
       <h2>
-        Isolatec es ina empresa de construcción polifacética. Nos dedicamos a reformas generales con más de dos décadas de experiencia en el campo. Contamos con profesionales dedicados a construcción, embaldosado, pintura, fontanería y más. 
+        Isolatec es una empresa de construcción polifacética. Nos dedicamos a reformas generales con más de dos décadas de experiencia en el campo. Contamos con profesionales dedicados a construcción, embaldosado, pintura, fontanería y más. 
       </h2>
       <h1>
         Todo en un lugar
@@ -64,17 +64,12 @@
       <div class="content_half"><h2>Cím3</h2>
         Lorem ipsum dolor sit amet, consectetur adipiscing elit. Maecenas ac elit vel justo lacinia sodales. Maecenas sed feugiat felis. Mauris malesuada sodales nibh sit amet aliquam. Sed tempor commodo imperdiet. Nulla facilisi. Pellentesque nibh arcu, vehicula in purus id, gravida vulputate purus
       </div>
-      <div class="content_half"><h2>Cím3</h2>
+      <div class="content_half lastelement"><h2>Cím3</h2>
         Lorem ipsum dolor sit amet, consectetur adipiscing elit. Maecenas ac elit vel justo lacinia sodales. Maecenas sed feugiat felis. Mauris malesuada sodales nibh sit amet aliquam. Sed tempor commodo imperdiet. Nulla facilisi. Pellentesque nibh arcu, vehicula in purus id, gravida vulputate purus
       </div>
+     
       
-      <p>
-        Por eso, la conveniencia de contratar nuestros servicios recae en  la variedad de tipos de trabajo que realizamos. Ofrecemos soluciones a todo lo que pueda surgir en la obra. Y si algo se nos escapa, nos encargamos de encontrar a la subcontratisa más adecuada. Con un solo servicio completo, usted podrá despreocuparse de la necesidad de contratar a varias empresas y organizar los trabajos. Nosoteos lo hacemos por usted, así solo tendrá que *concentrarse* en lo que más importa, en cómo quiere que sea su hogar. </p>
-
-       <!-- <div class="cocoen">
-        <img src="http://www.wedgewoodhomes.co.uk/images/PlotSmall/Cross-Keys-Plot-1-Banner.jpg" alt="">
-        <img src="http://www.wedgewoodhomes.co.uk/images/gallery/Chestfield-10.jpg" alt="">
-</div> -->
+        Por eso, la conveniencia de contratar nuestros servicios recae en  la variedad de tipos de trabajo que realizamos. Ofrecemos soluciones a todo lo que pueda surgir en la obra. Y si algo se nos escapa, nos encargamos de encontrar a la subcontratisa más adecuada. Con un solo servicio completo, usted podrá despreocuparse de la necesidad de contratar a varias empresas y organizar los trabajos. Nosoteos lo hacemos por usted, así solo tendrá que *concentrarse* en lo que más importa, en cómo quiere que sea su hogar.
 
     </section>
     <footer id="footer">
